First working prototype

--- a/settings.toml
+++ b/settings.toml
@@ -1,12 +1,13 @@
-#[default]
+[default]
 #NOTIFICATION_TO=quux
 #NOTIFICATION_FROM=quuux
 
 #SMTP_USERNAME=foo
 #SMTP_PASSWORD=bar
 #SMTP_HOSTNAME=baz
-SMTP_PORT=465
+SMTP_PORT=587
 SMTP_STARTTLS=true
+SMTP_SSL=false
 
 #IMAP_USERNAME=foo
 #IMAP_PASSWORD=bar
